--- a/.static/basic.css
+++ b/.static/basic.css
@@ -42,6 +42,11 @@ div.related li.right {
     float: right;
     margin-right: 5px;
 }
+div.related.stuck {
+    position:   fixed;
+    top:        0;
+    bow-shadow: 0 2px 4px rgba(0, 0, 0, .3);
+}
 
 /* -- sidebar --------------------------------------------------------------- */
 
