--- a/.static/default.css
+++ b/.static/default.css
@@ -17,9 +17,9 @@
 
 body {
 /*    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; */
-/*    font-family: sans-serif; */
-    font-family: Georgia, serif;
-    font-size: 105%;
+/*    font-family: Georgia, serif; */
+    font-family: sans-serif;
+    font-size: 100%;
     background-color: #351642;
     color: #000;
     margin: 0;
