Essai de 'position: fixed' pour des trucs de la barre latérale.

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -17,6 +17,12 @@ div.clearer {
     clear: both;
 }
 
+/* -- a test FIXME ----------------------------------------------------------- */
+
+div.will-be-sticky {
+    position: fixed;
+}
+
 /* -- relbar ---------------------------------------------------------------- */
 
 div.related {
