ok faire un changement sur <meta title='name'>..</meta> n'est PAS une bonne idée...

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -20,25 +20,27 @@ div.clearer {
 /* -- a test FIXME ----------------------------------------------------------- */
 
 div.will-be-sticky {
-    padding: 10px 5px 0 10px;
+ /*   padding: 10px 5px 0 10px;
     float: left;
     width: 230px;
     margin-left: -100%;
     font-size: 90%;
     bottom: 340px;
+ */
 }
 
 div.will-be-sticky.stuck {
-    position: fixed;
+  /*  position: fixed; */
 }
 
 div.is-sticky {
-    padding: 10px 5px 0 10px;
+ /*   padding: 10px 5px 0 10px;
     float: left;
     width: 230px;
     font-size: 90%;
     bottom: 240px;
     position: fixed;
+ */
 }
 
 /* -- relbar ---------------------------------------------------------------- */
