--- a/.static/basic.css
+++ b/.static/basic.css
@@ -45,6 +45,8 @@ div.is-sticky {
 
 /* -- href with extra properties -------------------------------------------- */
 
+a { white-space: nowrap; }
+
 /* jsfiddle.net tDQWN */
 /*
 a[title]:hover:after {
