working one skuplt...

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -45,7 +45,7 @@ div.is-sticky {
 
 /* -- href with extra properties -------------------------------------------- */
 
-a { white-space: nowrap; }
+/* a { white-space: nowrap; } */
 
 /* jsfiddle.net tDQWN */
 /*
