oki doki, myalert marche aussi bien que window.alert. A voir maintenant comment (facilement) changer ça dans les autres pages.

--- a/.static/basic.css
+++ b/.static/basic.css
@@ -54,7 +54,7 @@ a[class*="external"]:after {
     top: -7px;
 }
 
-a[class="image-reference"]:after{ }
+a[class="image-reference"]:after{ content: ""}
 
 a[href*="perso.crans.org"]:after {
     color: #C200D3;
