--- a/.static/default.css
+++ b/.static/default.css
@@ -22,9 +22,9 @@ body {
     font-size: 100%;
     background-color: #351642;
     color: #000;
-    top: 31px;
     margin: 0;
     padding: 0;
+    /*top: 31px;*/
 }
 
 div.document {
@@ -37,21 +37,25 @@ div.documentwrapper {
 }
 
 div.bodywrapper {
-    margin: 0 0 0 230px;
+    /*margin: 0 0 0 230px; */
+    margin: 31px 0 0 230px;
 }
 
 div.body {
     background-color: white;
     color: black;
     padding: 0 20px 30px 20px;
+  /*  position: relative;
+    top: 31px;*/
 }
 
 div.footer {
     color: #ffffff;
-    width: 100%;
+    /* width: 100%; */
     padding: 9px 0 9px 0;
     text-align: center;
     font-size: 75%;
+    margin-left: 230px;
 }
 
 div.footer a {
