--- a/.static/default.css
+++ b/.static/default.css
@@ -16,19 +16,19 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-/*    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; */
-/*    font-family: Georgia, serif; */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
     color: #000;
     margin: 0;
     padding: 0;
-    /*top: 31px;*/
+   /* background-color: #222; */
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGklEQVQIW2NkYGD4D8SMQAwGcAY2AbBKDBUAVuYCBQPd34sAAAAASUVORK5CYII=);
+    background-repeat: repeat;
 }
 
 div.document {
-    background-color: #351642;
+  background-color: #351642;
 }
 
 div.documentwrapper {
@@ -37,25 +37,22 @@ div.documentwrapper {
 }
 
 div.bodywrapper {
-    /*margin: 0 0 0 230px; */
-    margin: 31px 0 0 230px;
+    /*margin: 31 0 0 230px; */  /* Disable if using meny */
+    margin: 31px 0 0 0;
 }
 
 div.body {
     background-color: white;
     color: black;
     padding: 0 20px 30px 20px;
-  /*  position: relative;
-    top: 31px;*/
 }
 
 div.footer {
     color: #ffffff;
-    /* width: 100%; */
     padding: 9px 0 9px 0;
     text-align: center;
     font-size: 75%;
-    margin-left: 230px;
+   /* margin-left: 230px; */ /* Disable if using meny */
 }
 
 div.footer a {
@@ -134,6 +131,11 @@ div#sidebarbutton {
 a {
     color: #A200D3;
     text-decoration: none;
+    -webkit-transition: 0.15s color ease;
+       -moz-transition: 0.15s color ease;
+        -ms-transition: 0.15s color ease;
+         -o-transition: 0.15s color ease;
+            transition: 0.15s color ease;
 }
 
 a:visited {
