--- a/.static/basic.css
+++ b/.static/basic.css
@@ -122,7 +122,7 @@ a[href$="jepg"]:after {
     top: -7px;
 }
 
-a[class*="image"]:after{ content:; }
+a[class*="image"]:after{ content:""; }
 
 /* -- relbar ---------------------------------------------------------------- */
 
