--- a/.static/default.css
+++ b/.static/default.css
@@ -38,7 +38,7 @@ div.documentwrapper {
 
 div.bodywrapper {
     /* margin: 31px 0 0 0; */
-    margin: 31px 0 0 230px;  /* Disable if using meny */
+    margin: 0 0 0 230px;  /* Disable if using meny */
 }
 
 div.body {
