Better background for the footer, better description of requirements. Add a link to the source on Bitbucket (awesome to edit it directly)

--- a/.static/default.css
+++ b/.static/default.css
@@ -22,8 +22,8 @@ body {
     color: #000;
     margin: 0;
     padding: 0;
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGklEQVQIW2NkYGD4D8SMQAwGcAY2AbBKDBUAVuYCBQPd34sAAAAASUVORK5CYII=);
-    background-repeat: repeat;
+/*   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGklEQVQIW2NkYGD4D8SMQAwGcAY2AbBKDBUAVuYCBQPd34sAAAAASUVORK5CYII=); */
+/*   background-repeat: repeat; */
 }
 
 div.document {
@@ -48,6 +48,8 @@ div.body {
 }
 
 div.footer {
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGklEQVQIW2NkYGD4D8SMQAwGcAY2AbBKDBUAVuYCBQPd34sAAAAASUVORK5CYII=);
+    background-repeat: repeat;
     color: #ffffff;
     padding: 9px 0 9px 0;
     text-align: center;
