--- a/.static/default.css
+++ b/.static/default.css
@@ -16,6 +16,7 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
+    overflow-x: hidden; /* FIXME */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
@@ -42,6 +43,7 @@ div.bodywrapper {
 }
 
 div.body {
+    overflow-x: auto !important; /* FIXME */
     background-color: white;
     color: black;
     padding: 0 20px 30px 20px;
