--- a/.static/default.css
+++ b/.static/default.css
@@ -16,7 +16,7 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    overflow-x: hidden; /* FIXME */
+    overflow-x: hidden; /* FIXME */  /* BETA responsive */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
@@ -38,8 +38,8 @@ div.documentwrapper {
 }
 
 div.bodywrapper {
-    /* margin: 31px 0 0 0; */
     margin: 0 0 0 230px;  /* Disable if using meny */
+     /* BETA responsive */
 }
 
 div.body {
@@ -123,7 +123,6 @@ div.sphinxsidebar input {
     font-size: 1em;
 }
 
-
 /* for collapsible sidebar */
 div#sidebarbutton {
     background-color: #7E3B82;
@@ -150,8 +149,6 @@ a:visited {
 a:hover {
     text-decoration: underline;
 }
-
-
 
 /* -- body styles ----------------------------------------------------------- */
 
