--- a/.static/default.css
+++ b/.static/default.css
@@ -16,7 +16,7 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    overflow-x: hidden; /* FIXME */  /* BETA responsive */
+    overflow-x: hidden; /* FIXME */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
@@ -28,7 +28,7 @@ body {
 }
 
 div.document {
-  background-color: #351642;
+   background-color: #351642;
    margin: 31px 0 0 0;
 }
 
@@ -39,7 +39,7 @@ div.documentwrapper {
 
 div.bodywrapper {
     margin: 0 0 0 230px;  /* Disable if using meny */
-     /* BETA responsive */
+    /*margin: -20px 0 0 230px; FIXME */
 }
 
 div.body {
@@ -58,6 +58,34 @@ div.footer {
     font-size: 75%;
     margin-left: 230px; /* Disable if using meny */
 }
+
+/* BETA responsive
+Première étape: la cacher ! (ou la mettre au fond)
+Seconde étape: Désactiver
+ - GG Translate,
+ - forkit DONE
+ - noty,
+ - scrollup DONE
+sur mobile ! */
+@media (max-width: 680px){
+    body, div.body {
+        overflow-x: auto;
+    }
+    div.bodywrapper {
+        margin: 0 0 0 0;
+    }
+    div.footer {
+        position: relative;
+        margin-top: 10px;
+        margin-left: 0;
+    }
+    div.sphinxsidebar {
+        width: 90%;
+        position: relative;
+        overflow-x: auto;
+    }
+}
+/* Fin BETA responsive */
 
 div.footer a {
     color: #ffffff;
