--- a/.static/basic.css
+++ b/.static/basic.css
@@ -184,7 +184,7 @@ div.sphinxsidebar {
     }
 
     div.sphinxsidebar #searchbox input[type="text"] {
-        width: 170px; /* BETA responsive */
+        width: 170px;
     }
 
     div.sphinxsidebar #searchbox input[type="submit"] {
