--- a/.static/green.css
+++ b/.static/green.css
@@ -11,12 +11,10 @@
 
 body, div.document {
     background-color: #081E02; /* Green Theme */
-    /*background-color: #351642;*/
 }
 
 div.related {
     background-color: #15350C; /* Green Theme */
-    /*background-color: #4D1351;*/
 }
 
 div.body h1,
@@ -25,7 +23,6 @@ div.body h3,
 div.body h4,
 div.body h5,
 div.body h6 {
-    background-color: #D4F4D6; /* Green Theme */
-    /*background-color: #F0E1F7;*/
-    color: #750404;
+    color: #750404; /* Green Theme */
+    background-color: #E0FFD6; /* Green Theme */
 }
