--- a/.static/orange.css
+++ b/.static/orange.css
@@ -1,6 +1,6 @@
 /*
- * green.css
- * ~~~~~~~~~
+ * orange.css
+ * ~~~~~~~~~~
  *
  * Sphinx stylesheet -- experimentation to dynamically change the color theme.
  *
@@ -10,13 +10,11 @@
  */
 
 body, div.document {
-    background-color: #602D03; /* Orange Theme */
-    /*background-color: #351642;*/
+    background-color: #381B03; /* Orange Theme */
 }
 
 div.related {
-    background-color: #683B0D; /* Orange Theme */
-    /*background-color: #4D1351;*/
+    background-color: #4F2A06; /* Orange Theme */
 }
 
 div.body h1,
@@ -25,7 +23,6 @@ div.body h3,
 div.body h4,
 div.body h5,
 div.body h6 {
-    background-color: #FFD87F; /* Orange Theme */
-    /*background-color: #F0E1F7;*/
-    color: black;
+    color: black; /* Orange Theme */
+    background-color: #F6FFC4; /* Orange Theme */
 }
