--- a/.static/purple.css
+++ b/.static/purple.css
@@ -23,6 +23,6 @@ div.body h3,
 div.body h4,
 div.body h5,
 div.body h6 {
-    color: #750404; /* Purple Theme */
+    color: #4F2070; /* Purple Theme */
     background-color: #F0E1F7; /* Purple Theme */
 }
