Responsive back. On essaie des trucs, mais C4EST POURRI

--- a/.static/default.css
+++ b/.static/default.css
@@ -17,7 +17,7 @@
 	font-size: 100%;
 }*/
 
-/*@import url("basic.css");*/
+@import url("basic.css");
 
 /* -- page layout ----------------------------------------------------------- */
 
