--- a/.static/default.css
+++ b/.static/default.css
@@ -65,38 +65,6 @@ div.footer {
     margin-left: 230px; /* Disable if using meny */
 }
 
-/* BETA responsive */
-@media (max-width: 680px){
-    body, div.body {
-        /*overflow-x: auto;*/
-        overflow-y: auto;
-    }
-    div.bodywrapper {
-        margin: 0 0 0 0;
-    }
-    div.footer {
-        position: relative;
-        margin-top: 10px;
-        margin-left: 0;
-    }
-    div.sphinxsidebar {
-        /*overflow-x: auto;*/
-        position: relative;
-        width: 90%;
-    }
-    div.sidebar {
-        float: none;
-        position: relative;
-        width: 90%;
-    }
-
-    span.locationOfThePage {
-        display: none;
-        visibility: hidden; 
-    }
-}
-/* Fin BETA responsive */
-
 div.footer a {
     color: #ffffff;
     text-decoration: underline;
@@ -174,6 +142,41 @@ div.sphinxsidebar input {
 div#sidebarbutton {
     background-color: #7E3B82;
 }
+
+/* BETA responsive */
+@media (max-width: 680px){
+    body, div.body {
+        /*overflow-x: auto;*/
+        overflow-y: auto;
+    }
+    div.bodywrapper {
+        margin: 0 0 0 0;
+    }
+    div.footer {
+        position: relative;
+        margin-top: 10px;
+        margin-left: 0;
+    }
+    div.sphinxsidebar {
+        /*overflow-x: auto;*/
+        position: relative;
+        width: 90%;
+        top: 2px;
+    }
+    div.sidebar {
+        float: none;
+        position: relative;
+        width: 90%;
+    }
+    span.locationOfThePage, div.related, a.forkit {
+        display: none;
+        visibility: hidden; 
+    }
+    div.document {
+        margin: -10px 0 0 0;
+    }
+}
+/* Fin BETA responsive */
 
 
 /* -- hyperlink styles ------------------------------------------------------ */
