--- a/.static/hacks.css
+++ b/.static/hacks.css
@@ -56,9 +56,8 @@ img.languageswitch {
 #scrollUpLeft {
 	bottom: 50px; left:   212px;
 	height: 38px; width:  38px;
-	background: url('http://perso.crans.org/besson/_images/.top.png?hacks.css');
+	background: url('http://perso.crans.org/besson/_images/.top.png');
 }
-
 /* BETA responsive */
 @media (max-width: 680px){
   #scrollUpLeft {
@@ -70,7 +69,7 @@ img.languageswitch {
 
 /* Social Icons in the sidebar (available: twitter, facebook, linkedin, google+) */
 .social-icons li a.facebook {
-    background-image: url('http://perso.crans.org/besson/_images/.facebook.png?hacks.css');
+    background-image: url('http://perso.crans.org/besson/_images/.facebook.png');
     display: block; margin-left: auto; margin-right: auto;
 }
 .social-icons li a:hover {
