--- a/.static/default.css
+++ b/.static/default.css
@@ -22,7 +22,7 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    overflow-x: hidden; /* FIXME */
+    overflow-x: hidden; /* FIXME? */
     font-family: sans-serif;
     font-size: 100%;
     background-color: #351642;
@@ -45,11 +45,11 @@ div.documentwrapper {
 
 div.bodywrapper {
     margin: 0 0 0 230px;  /* Disable if using meny */
-    /*margin: -20px 0 0 230px; FIXME */
+    /*margin: -20px 0 0 230px; FIXME? */
 }
 
 div.body {
-    overflow-x: auto !important; /* FIXME */
+    overflow-x: auto !important; /* FIXME? */
     background-color: white;
     color: black;
     padding: 0 20px 30px 20px;
@@ -143,7 +143,7 @@ div#sidebarbutton {
     background-color: #7E3B82;
 }
 
-/* BETA responsive */
+/* responsive */
 @media (max-width: 680px){
     body, div.body {
         /*overflow-x: auto;*/
@@ -176,7 +176,7 @@ div#sidebarbutton {
         margin: -10px 0 0 0;
     }
 }
-/* Fin BETA responsive */
+/* End responsive */
 
 
 /* -- hyperlink styles ------------------------------------------------------ */
